@@ -7,6 +7,11 @@ Sub-topics of major changes are intented
 
 2018-12-30
 
+Fixed bug which only recognized the original generators as actual generators.
+New tanks Added
+    Healer II and Healer III, both are healers which heal faster (and use power more efficiently).
+    Generators II, III, and IIII (might change to IV), they generate and store more power than before.
+
 Tank-twin-triple shot bug fixed. Tanks being upgraded to twins would do an additional upgrade to triple shot. This has now been fixed.
 
 2018-12-29
